Applications management. Site URI Support. translations.

--- a/qtc_packaging/debian_harmattan/control
+++ b/qtc_packaging/debian_harmattan/control
@@ -8,7 +8,8 @@ Homepage: https://openrepos.net/content/basil/warehouse
 
 Package: warehouse
 Architecture: armel
-Depends: ${shlibs:Depends}, ${misc:Depends}, libqt4-declarative, aegis-developer-unknown-source-policy
+Pre-Depends: aegis-developer-unknown-source-policy
+Depends: ${shlibs:Depends}, ${misc:Depends}, libqt4-declarative
 Description: Native client for OpenRepos
   Browse and install applications, enable repositories.
 XSBC-Maemo-Display-Name: Warehouse
