--- a/warehouse_meego.desktop
+++ b/warehouse_meego.desktop
@@ -10,7 +10,10 @@ X-Window-Icon=
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
 #contentaction+dbus
-MimeType=x-maemo-urischeme/openrepos;x-maemo-urischeme/openrepos-url;x-maemo-highlight/openrepos;x-maemo-highlight/openrepos-url;
+MimeType=x-maemo-highlight/openrepos;
+MimeType=x-maemo-highlight/openrepos-url;
+MimeType=x-maemo-urischeme/openrepos;
+MimeType=x-maemo-urischeme/openrepos-url;
 X-Maemo-Service=com.thecust.warehouse
 X-Maemo-Object-Path=/com/thecust/warehouse
 X-Maemo-Method=com.thecust.warehouse.loadURI
