--- a/rpm/harbour-warehouse.yaml
+++ b/rpm/harbour-warehouse.yaml
@@ -1,7 +1,7 @@
 Name: harbour-warehouse
 Summary: Warehouse application
 Version: 0.2
-Release: 12
+Release: 16
 Group: Qt/Qt
 URL: https://openrepos.net/
 License: GPLv3
@@ -26,9 +26,6 @@ Files:
 - '%{_datadir}/%{name}/qml-sailfish'
 - '%{_datadir}/applications/%{name}.desktop'
 - '%{_datadir}/icons/hicolor/86x86/apps/%{name}.png'
-- /usr/bin
-- /usr/share/harbour-warehouse
-- /usr/share/applications
-- /usr/share/icons/hicolor/86x86/apps
-- /etc/zypp/repos.d
+- '%{_datadir}/harbour-warehouse'
+- '%{_sysconfdir}/zypp/repos.d'
 PkgBR: []
