polkit policy added. application changelog display added

--- a/rpm/harbour-warehouse.yaml
+++ b/rpm/harbour-warehouse.yaml
@@ -1,7 +1,7 @@
 Name: harbour-warehouse
 Summary: Warehouse application
-Version: 0.2
-Release: 16
+Version: 0.3
+Release: 18
 Group: Qt/Qt
 URL: https://openrepos.net/
 License: GPLv3
@@ -28,4 +28,5 @@ Files:
 - '%{_datadir}/icons/hicolor/86x86/apps/%{name}.png'
 - '%{_datadir}/harbour-warehouse'
 - '%{_sysconfdir}/zypp/repos.d'
+- '%{_sharedstatedir}/polkit-1/localauthority/50-local.d/50-net.openrepos.warehouse-packagekit.pkla'
 PkgBR: []
